# rust-vbs

./: Cargo.toml  README.md
src/: controllers.rs  error.rs  main.rs  presenters.rs  repository.rs  usecases.rs
src/controllers/: vehicle_controller.rs
src/controllers/response/: all_vehicles_response.rs  available_for_hire_response.rs  cost_response.rs  mod.rs
src/domain/: mod.rs  types.rs
src/domain/entity/: mod.rs  vehicle.rs  vehicle_category.rs
src/domain/types/: fuel_type.rs  vehicle_type.rs
src/dto/: mod.rs  vehicle_category_dto.rs  vehicle_dto.rs
src/error/: vbs_error.rs
src/presenters/: vehicle_presenter.rs
src/repository/: vehicle_repository.rs
src/usecases/: add_new_hevicle_use_case.rs  get_all_vehicles_use_case.rs  get_available_for_hire_use_case.rs  get_cost_of_hiring_use_case.rs
