[package]
name = "rust-vbs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"]  }
rocket_contrib = "0.4.11"
serde = "1.0.182"
serde_derive = "1.0.182"
serde_json = "1.0.104"
uuid = { version = "1.4.1", features = ["serde"] }
bigdecimal = "0.4.1"